--- a/task2/package.json
+++ b/task2/package.json
@@ -34,6 +34,10 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^7.17.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.3",
+    "sequelize-typescript": "^1.1.0"
   }
 }
