--- a/task2/package.json
+++ b/task2/package.json
@@ -34,6 +34,7 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
