--- a/task2/package.json
+++ b/task2/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "lint": "eslint */**/*.{js,ts} --fix"
+    "lint": "eslint */**/*.{js,ts} --fix",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
     "eslint": "^6.7.2",
+    "jest": "^25.1.0",
     "joi": "^14.3.1",
     "nodemon": "^2.0.1",
     "ts-node": "^8.5.4",
@@ -35,6 +37,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
